--- a/svm.ipynb
+++ b/svm.ipynb
@@ -6,7 +6,6 @@
       "name": "svm.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyORAvmbh6MnvCTwx5R0IIPB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +30,7 @@
         "id": "c-0VlFvOjPy3"
       },
       "source": [
-        "#SVM for breast cancer dataset"
+        "#SVM on breast cancer dataset"
       ]
     },
     {
@@ -107,7 +106,7 @@
         "clf.fit(x_train, y_train)\r\n",
         "y_predict = clf.predict(x_test)\r\n"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -157,7 +156,7 @@
         "accuracy = 100 * ((len(y_test) - incorrect_num)/len(y_test))\r\n",
         "print(f\"The accuracy of the SVM model using the SVC kernel is: {accuracy:.1f}%.\")"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,7 +181,7 @@
         "\r\n",
         "print(classification_report(y_test, y_predict))"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
