--- a/svm.ipynb
+++ b/svm.ipynb
@@ -36,6 +36,22 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "w7ArErQyBofi"
+      },
+      "source": [
+        "/* --------------------------------------------------------------------------------------------------------------------------------------\r\n",
+        "*   Author - Caleb Dawson\r\n",
+        "*   NetID - cdd370\r\n",
+        "*   CSE 4633 Artificial Intelligence - Assignment 1\r\n",
+        "*   Resources Used - slides, lecture recordings, scikit-learn.org\r\n",
+        "\r\n",
+        "--------------------------------------------------------------------------------------------------------------------------------------*/\r\n",
+        "\r\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "A8wUQldAjgjn"
       },
       "source": [
