--- a/svm.ipynb
+++ b/svm.ipynb
@@ -59,9 +59,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BgmNn5zQDtNA"
+      },
+      "source": [
+        "Creates a DataFrame and sets the features and target.<br>\r\n",
+        "The structure and the first five entries of the DataFrame are printed."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "c3sPSva0iGY0"
+        "id": "c3sPSva0iGY0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 927
+        },
+        "outputId": "363f5ba0-b571-427a-dfdd-0e9ffa77de2b"
       },
       "source": [
         "from sklearn.datasets import load_breast_cancer\r\n",
@@ -73,8 +88,299 @@
         "df.info()\r\n",
         "df.head()\r\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 569 entries, 0 to 568\n",
+            "Data columns (total 31 columns):\n",
+            " #   Column                   Non-Null Count  Dtype  \n",
+            "---  ------                   --------------  -----  \n",
+            " 0   mean radius              569 non-null    float64\n",
+            " 1   mean texture             569 non-null    float64\n",
+            " 2   mean perimeter           569 non-null    float64\n",
+            " 3   mean area                569 non-null    float64\n",
+            " 4   mean smoothness          569 non-null    float64\n",
+            " 5   mean compactness         569 non-null    float64\n",
+            " 6   mean concavity           569 non-null    float64\n",
+            " 7   mean concave points      569 non-null    float64\n",
+            " 8   mean symmetry            569 non-null    float64\n",
+            " 9   mean fractal dimension   569 non-null    float64\n",
+            " 10  radius error             569 non-null    float64\n",
+            " 11  texture error            569 non-null    float64\n",
+            " 12  perimeter error          569 non-null    float64\n",
+            " 13  area error               569 non-null    float64\n",
+            " 14  smoothness error         569 non-null    float64\n",
+            " 15  compactness error        569 non-null    float64\n",
+            " 16  concavity error          569 non-null    float64\n",
+            " 17  concave points error     569 non-null    float64\n",
+            " 18  symmetry error           569 non-null    float64\n",
+            " 19  fractal dimension error  569 non-null    float64\n",
+            " 20  worst radius             569 non-null    float64\n",
+            " 21  worst texture            569 non-null    float64\n",
+            " 22  worst perimeter          569 non-null    float64\n",
+            " 23  worst area               569 non-null    float64\n",
+            " 24  worst smoothness         569 non-null    float64\n",
+            " 25  worst compactness        569 non-null    float64\n",
+            " 26  worst concavity          569 non-null    float64\n",
+            " 27  worst concave points     569 non-null    float64\n",
+            " 28  worst symmetry           569 non-null    float64\n",
+            " 29  worst fractal dimension  569 non-null    float64\n",
+            " 30  type                     569 non-null    int64  \n",
+            "dtypes: float64(30), int64(1)\n",
+            "memory usage: 137.9 KB\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>mean radius</th>\n",
+              "      <th>mean texture</th>\n",
+              "      <th>mean perimeter</th>\n",
+              "      <th>mean area</th>\n",
+              "      <th>mean smoothness</th>\n",
+              "      <th>mean compactness</th>\n",
+              "      <th>mean concavity</th>\n",
+              "      <th>mean concave points</th>\n",
+              "      <th>mean symmetry</th>\n",
+              "      <th>mean fractal dimension</th>\n",
+              "      <th>radius error</th>\n",
+              "      <th>texture error</th>\n",
+              "      <th>perimeter error</th>\n",
+              "      <th>area error</th>\n",
+              "      <th>smoothness error</th>\n",
+              "      <th>compactness error</th>\n",
+              "      <th>concavity error</th>\n",
+              "      <th>concave points error</th>\n",
+              "      <th>symmetry error</th>\n",
+              "      <th>fractal dimension error</th>\n",
+              "      <th>worst radius</th>\n",
+              "      <th>worst texture</th>\n",
+              "      <th>worst perimeter</th>\n",
+              "      <th>worst area</th>\n",
+              "      <th>worst smoothness</th>\n",
+              "      <th>worst compactness</th>\n",
+              "      <th>worst concavity</th>\n",
+              "      <th>worst concave points</th>\n",
+              "      <th>worst symmetry</th>\n",
+              "      <th>worst fractal dimension</th>\n",
+              "      <th>type</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>17.99</td>\n",
+              "      <td>10.38</td>\n",
+              "      <td>122.80</td>\n",
+              "      <td>1001.0</td>\n",
+              "      <td>0.11840</td>\n",
+              "      <td>0.27760</td>\n",
+              "      <td>0.3001</td>\n",
+              "      <td>0.14710</td>\n",
+              "      <td>0.2419</td>\n",
+              "      <td>0.07871</td>\n",
+              "      <td>1.0950</td>\n",
+              "      <td>0.9053</td>\n",
+              "      <td>8.589</td>\n",
+              "      <td>153.40</td>\n",
+              "      <td>0.006399</td>\n",
+              "      <td>0.04904</td>\n",
+              "      <td>0.05373</td>\n",
+              "      <td>0.01587</td>\n",
+              "      <td>0.03003</td>\n",
+              "      <td>0.006193</td>\n",
+              "      <td>25.38</td>\n",
+              "      <td>17.33</td>\n",
+              "      <td>184.60</td>\n",
+              "      <td>2019.0</td>\n",
+              "      <td>0.1622</td>\n",
+              "      <td>0.6656</td>\n",
+              "      <td>0.7119</td>\n",
+              "      <td>0.2654</td>\n",
+              "      <td>0.4601</td>\n",
+              "      <td>0.11890</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>20.57</td>\n",
+              "      <td>17.77</td>\n",
+              "      <td>132.90</td>\n",
+              "      <td>1326.0</td>\n",
+              "      <td>0.08474</td>\n",
+              "      <td>0.07864</td>\n",
+              "      <td>0.0869</td>\n",
+              "      <td>0.07017</td>\n",
+              "      <td>0.1812</td>\n",
+              "      <td>0.05667</td>\n",
+              "      <td>0.5435</td>\n",
+              "      <td>0.7339</td>\n",
+              "      <td>3.398</td>\n",
+              "      <td>74.08</td>\n",
+              "      <td>0.005225</td>\n",
+              "      <td>0.01308</td>\n",
+              "      <td>0.01860</td>\n",
+              "      <td>0.01340</td>\n",
+              "      <td>0.01389</td>\n",
+              "      <td>0.003532</td>\n",
+              "      <td>24.99</td>\n",
+              "      <td>23.41</td>\n",
+              "      <td>158.80</td>\n",
+              "      <td>1956.0</td>\n",
+              "      <td>0.1238</td>\n",
+              "      <td>0.1866</td>\n",
+              "      <td>0.2416</td>\n",
+              "      <td>0.1860</td>\n",
+              "      <td>0.2750</td>\n",
+              "      <td>0.08902</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>19.69</td>\n",
+              "      <td>21.25</td>\n",
+              "      <td>130.00</td>\n",
+              "      <td>1203.0</td>\n",
+              "      <td>0.10960</td>\n",
+              "      <td>0.15990</td>\n",
+              "      <td>0.1974</td>\n",
+              "      <td>0.12790</td>\n",
+              "      <td>0.2069</td>\n",
+              "      <td>0.05999</td>\n",
+              "      <td>0.7456</td>\n",
+              "      <td>0.7869</td>\n",
+              "      <td>4.585</td>\n",
+              "      <td>94.03</td>\n",
+              "      <td>0.006150</td>\n",
+              "      <td>0.04006</td>\n",
+              "      <td>0.03832</td>\n",
+              "      <td>0.02058</td>\n",
+              "      <td>0.02250</td>\n",
+              "      <td>0.004571</td>\n",
+              "      <td>23.57</td>\n",
+              "      <td>25.53</td>\n",
+              "      <td>152.50</td>\n",
+              "      <td>1709.0</td>\n",
+              "      <td>0.1444</td>\n",
+              "      <td>0.4245</td>\n",
+              "      <td>0.4504</td>\n",
+              "      <td>0.2430</td>\n",
+              "      <td>0.3613</td>\n",
+              "      <td>0.08758</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>11.42</td>\n",
+              "      <td>20.38</td>\n",
+              "      <td>77.58</td>\n",
+              "      <td>386.1</td>\n",
+              "      <td>0.14250</td>\n",
+              "      <td>0.28390</td>\n",
+              "      <td>0.2414</td>\n",
+              "      <td>0.10520</td>\n",
+              "      <td>0.2597</td>\n",
+              "      <td>0.09744</td>\n",
+              "      <td>0.4956</td>\n",
+              "      <td>1.1560</td>\n",
+              "      <td>3.445</td>\n",
+              "      <td>27.23</td>\n",
+              "      <td>0.009110</td>\n",
+              "      <td>0.07458</td>\n",
+              "      <td>0.05661</td>\n",
+              "      <td>0.01867</td>\n",
+              "      <td>0.05963</td>\n",
+              "      <td>0.009208</td>\n",
+              "      <td>14.91</td>\n",
+              "      <td>26.50</td>\n",
+              "      <td>98.87</td>\n",
+              "      <td>567.7</td>\n",
+              "      <td>0.2098</td>\n",
+              "      <td>0.8663</td>\n",
+              "      <td>0.6869</td>\n",
+              "      <td>0.2575</td>\n",
+              "      <td>0.6638</td>\n",
+              "      <td>0.17300</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>20.29</td>\n",
+              "      <td>14.34</td>\n",
+              "      <td>135.10</td>\n",
+              "      <td>1297.0</td>\n",
+              "      <td>0.10030</td>\n",
+              "      <td>0.13280</td>\n",
+              "      <td>0.1980</td>\n",
+              "      <td>0.10430</td>\n",
+              "      <td>0.1809</td>\n",
+              "      <td>0.05883</td>\n",
+              "      <td>0.7572</td>\n",
+              "      <td>0.7813</td>\n",
+              "      <td>5.438</td>\n",
+              "      <td>94.44</td>\n",
+              "      <td>0.011490</td>\n",
+              "      <td>0.02461</td>\n",
+              "      <td>0.05688</td>\n",
+              "      <td>0.01885</td>\n",
+              "      <td>0.01756</td>\n",
+              "      <td>0.005115</td>\n",
+              "      <td>22.54</td>\n",
+              "      <td>16.67</td>\n",
+              "      <td>152.20</td>\n",
+              "      <td>1575.0</td>\n",
+              "      <td>0.1374</td>\n",
+              "      <td>0.2050</td>\n",
+              "      <td>0.4000</td>\n",
+              "      <td>0.1625</td>\n",
+              "      <td>0.2364</td>\n",
+              "      <td>0.07678</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   mean radius  mean texture  ...  worst fractal dimension  type\n",
+              "0        17.99         10.38  ...                  0.11890     0\n",
+              "1        20.57         17.77  ...                  0.08902     0\n",
+              "2        19.69         21.25  ...                  0.08758     0\n",
+              "3        11.42         20.38  ...                  0.17300     0\n",
+              "4        20.29         14.34  ...                  0.07678     0\n",
+              "\n",
+              "[5 rows x 31 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -83,6 +389,15 @@
       },
       "source": [
         "###Train and test data"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "a6jRkVsAE0k6"
+      },
+      "source": [
+        "The data is split into a training portion and a testing portion."
       ]
     },
     {
@@ -95,7 +410,7 @@
         "\r\n",
         "x_train, x_test, y_train, y_test = train_test_split(df.drop('type', axis=1), df.type, test_size = 0.3, random_state = 13)\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -108,40 +423,45 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-MstBymQE7GS"
+      },
+      "source": [
+        "The SVC kernel of the SVM classification is used.<br>\r\n",
+        "The first 40 predictions are then printed as an example."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "VQN-OD21vlvU",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "821d21f0-f563-4047-e8ad-f2bc476e557d"
+        "outputId": "2f736f42-54e1-4be2-eb3a-12ee60661c84"
       },
       "source": [
         "from sklearn import svm\r\n",
         "clf = svm.SVC()\r\n",
         "clf.fit(x_train, y_train)\r\n",
-        "y_predict = clf.predict(x_test)\r\n"
+        "y_predict = clf.predict(x_test)\r\n",
+        "y_predict[0:40]\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 1, 1,\n",
-              "       0, 1, 1, 1, 1, 0, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 1, 1,\n",
-              "       1, 1, 1, 1, 0, 1, 0, 0, 0, 1, 1, 0, 1, 0, 0, 1, 1, 1, 1, 0, 1, 1,\n",
-              "       1, 1, 1, 1, 0, 0, 1, 1, 0, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 0, 0, 1,\n",
-              "       1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0,\n",
-              "       1, 0, 1, 1, 0, 1, 0, 1, 1, 1, 0, 1, 0, 1, 1, 0, 1, 0, 1, 1, 1, 1,\n",
-              "       0, 1, 0, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1,\n",
-              "       1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1])"
+              "       0, 1, 1, 1, 1, 0, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 0, 0])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 12
         }
       ]
     },
@@ -155,13 +475,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4fnl7RgKFOh4"
+      },
+      "source": [
+        "The accuracy is now tested first manually, then with classification_report()."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZrQUTJC_HFdw",
-        "outputId": "6f582139-9fe5-43e5-bb94-91f0edd297a4"
+        "outputId": "d77e078a-0279-44d9-e9d6-03dbfe059ac5"
       },
       "source": [
         "import numpy as np\r\n",
@@ -170,9 +499,9 @@
         "dif = y_predict - y_test\r\n",
         "incorrect_num = np.sum(np.abs(dif))\r\n",
         "accuracy = 100 * ((len(y_test) - incorrect_num)/len(y_test))\r\n",
-        "print(f\"The accuracy of the SVM model using the SVC kernel is: {accuracy:.1f}%.\")"
+        "print(f\"The accuracy of the SVM model using the SVC kernel is: {accuracy:.1f}%.\")\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,14 +519,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "k88Ytl8BH4Oc",
-        "outputId": "5331040d-85a6-4822-e6e9-7fe3dcae1cf9"
+        "outputId": "4e284473-fe84-43c2-90af-266627930f3c"
       },
       "source": [
         "from sklearn.metrics import classification_report\r\n",
         "\r\n",
         "print(classification_report(y_test, y_predict))"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,17 +544,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Y1OSxiOEIBAh"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
