--- a/svm.ipynb
+++ b/svm.ipynb
@@ -76,7 +76,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 927
         },
-        "outputId": "363f5ba0-b571-427a-dfdd-0e9ffa77de2b"
+        "outputId": "58f9a070-6e16-4aba-f46a-978128a3f751"
       },
       "source": [
         "from sklearn.datasets import load_breast_cancer\r\n",
@@ -88,7 +88,7 @@
         "df.info()\r\n",
         "df.head()\r\n"
       ],
-      "execution_count": 4,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -378,7 +378,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 20
         }
       ]
     },
@@ -410,7 +410,7 @@
         "\r\n",
         "x_train, x_test, y_train, y_test = train_test_split(df.drop('type', axis=1), df.type, test_size = 0.3, random_state = 13)\r\n"
       ],
-      "execution_count": 6,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -439,7 +439,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2f736f42-54e1-4be2-eb3a-12ee60661c84"
+        "outputId": "996ca95d-87fd-4d9a-b2fb-027a3e83ee46"
       },
       "source": [
         "from sklearn import svm\r\n",
@@ -448,7 +448,7 @@
         "y_predict = clf.predict(x_test)\r\n",
         "y_predict[0:40]\r\n"
       ],
-      "execution_count": 12,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -461,7 +461,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 22
         }
       ]
     },
@@ -490,7 +490,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZrQUTJC_HFdw",
-        "outputId": "d77e078a-0279-44d9-e9d6-03dbfe059ac5"
+        "outputId": "47987b01-643b-457c-c5c5-9f870b84dda2"
       },
       "source": [
         "import numpy as np\r\n",
@@ -501,7 +501,7 @@
         "accuracy = 100 * ((len(y_test) - incorrect_num)/len(y_test))\r\n",
         "print(f\"The accuracy of the SVM model using the SVC kernel is: {accuracy:.1f}%.\")\r\n"
       ],
-      "execution_count": 13,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -519,14 +519,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "k88Ytl8BH4Oc",
-        "outputId": "4e284473-fe84-43c2-90af-266627930f3c"
+        "outputId": "4640b419-b40d-4f14-d92a-97c3ce535729"
       },
       "source": [
         "from sklearn.metrics import classification_report\r\n",
         "\r\n",
         "print(classification_report(y_test, y_predict))"
       ],
-      "execution_count": 14,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -543,6 +543,24 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hpFUjIrlF-KG"
+      },
+      "source": [
+        "###Conclusion"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Jz8T0x5jGAq5"
+      },
+      "source": [
+        "The accuracy by the SVM classification was found to be about 91%."
       ]
     }
   ]
