--- a/svm.ipynb
+++ b/svm.ipynb
@@ -76,7 +76,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 927
         },
-        "outputId": "58f9a070-6e16-4aba-f46a-978128a3f751"
+        "outputId": "344544ae-72f4-423a-cd22-391fe5d34443"
       },
       "source": [
         "from sklearn.datasets import load_breast_cancer\r\n",
@@ -84,11 +84,11 @@
         "\r\n",
         "data = load_breast_cancer()\r\n",
         "df = pd.DataFrame(data['data'], columns=data['feature_names'])\r\n",
-        "df['type'] = data['target']\r\n",
+        "df['category'] = data['target']\r\n",
         "df.info()\r\n",
         "df.head()\r\n"
       ],
-      "execution_count": 20,
+      "execution_count": 196,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,7 +128,7 @@
             " 27  worst concave points     569 non-null    float64\n",
             " 28  worst symmetry           569 non-null    float64\n",
             " 29  worst fractal dimension  569 non-null    float64\n",
-            " 30  type                     569 non-null    int64  \n",
+            " 30  category                 569 non-null    int64  \n",
             "dtypes: float64(30), int64(1)\n",
             "memory usage: 137.9 KB\n"
           ],
@@ -186,7 +186,7 @@
               "      <th>worst concave points</th>\n",
               "      <th>worst symmetry</th>\n",
               "      <th>worst fractal dimension</th>\n",
-              "      <th>type</th>\n",
+              "      <th>category</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -365,12 +365,12 @@
               "</div>"
             ],
             "text/plain": [
-              "   mean radius  mean texture  ...  worst fractal dimension  type\n",
-              "0        17.99         10.38  ...                  0.11890     0\n",
-              "1        20.57         17.77  ...                  0.08902     0\n",
-              "2        19.69         21.25  ...                  0.08758     0\n",
-              "3        11.42         20.38  ...                  0.17300     0\n",
-              "4        20.29         14.34  ...                  0.07678     0\n",
+              "   mean radius  mean texture  ...  worst fractal dimension  category\n",
+              "0        17.99         10.38  ...                  0.11890         0\n",
+              "1        20.57         17.77  ...                  0.08902         0\n",
+              "2        19.69         21.25  ...                  0.08758         0\n",
+              "3        11.42         20.38  ...                  0.17300         0\n",
+              "4        20.29         14.34  ...                  0.07678         0\n",
               "\n",
               "[5 rows x 31 columns]"
             ]
@@ -378,7 +378,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 196
         }
       ]
     },
@@ -408,9 +408,9 @@
       "source": [
         "from sklearn.model_selection import train_test_split\r\n",
         "\r\n",
-        "x_train, x_test, y_train, y_test = train_test_split(df.drop('type', axis=1), df.type, test_size = 0.3, random_state = 13)\r\n"
+        "x_train, x_test, y_train, y_test = train_test_split(df.drop('category', axis=1), df.category, test_size = 0.3, random_state = 5)\r\n"
       ],
-      "execution_count": 21,
+      "execution_count": 197,
       "outputs": []
     },
     {
@@ -428,42 +428,24 @@
         "id": "-MstBymQE7GS"
       },
       "source": [
-        "The SVC kernel of the SVM classification is used.<br>\r\n",
-        "The first 40 predictions are then printed as an example."
+        "The SVC kernel of the SVM classification is used.<br>"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VQN-OD21vlvU",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "996ca95d-87fd-4d9a-b2fb-027a3e83ee46"
+        "id": "VQN-OD21vlvU"
       },
       "source": [
         "from sklearn import svm\r\n",
+        "import numpy as np\r\n",
+        "\r\n",
         "clf = svm.SVC()\r\n",
         "clf.fit(x_train, y_train)\r\n",
-        "y_predict = clf.predict(x_test)\r\n",
-        "y_predict[0:40]\r\n"
+        "y_predict = clf.predict(x_test)\r\n"
       ],
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 1, 1,\n",
-              "       0, 1, 1, 1, 1, 0, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 0, 0])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 22
-        }
-      ]
+      "execution_count": 198,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -472,6 +454,52 @@
       },
       "source": [
         "###Evaluation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "v6cGF_IbGgxK"
+      },
+      "source": [
+        "The predicted data is shown against the actual data."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "19lt5rEcGlhL",
+        "outputId": "125872e1-3f29-41d9-f147-80c8ad1281aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import numpy as np\r\n",
+        "\r\n",
+        "y_test = np.array(y_test)\r\n",
+        "print(f\"Predicted: {y_predict}\\n\")\r\n",
+        "print(f\"Actual: {y_test}\")"
+      ],
+      "execution_count": 199,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Predicted: [0 1 1 1 1 0 1 1 1 1 1 1 0 1 1 1 1 1 1 1 0 1 1 1 1 1 1 0 1 0 0 0 1 0 1 1 0\n",
+            " 1 1 0 1 1 1 0 1 1 0 0 1 0 1 1 1 1 1 0 0 0 1 0 0 1 1 1 1 1 1 1 1 0 1 0 1 1\n",
+            " 1 1 1 1 0 0 0 1 0 0 0 1 0 1 0 0 0 0 1 1 0 0 1 1 1 1 1 0 1 1 0 0 1 0 1 0 1\n",
+            " 0 1 0 1 1 0 1 0 1 1 1 0 1 0 1 0 1 1 0 1 1 1 1 1 0 1 1 1 1 1 1 1 0 1 1 1 0\n",
+            " 1 1 1 0 1 1 1 0 1 1 1 1 1 1 1 1 0 0 1 1 1 1 1]\n",
+            "\n",
+            "Actual: [0 1 1 1 1 0 1 1 1 1 1 1 0 1 1 1 1 1 1 1 0 1 1 1 1 1 0 0 1 0 0 0 0 0 1 1 0\n",
+            " 1 1 0 1 1 1 0 1 1 0 0 1 0 1 1 1 1 1 0 0 0 1 0 0 0 1 1 1 1 1 1 0 0 1 0 1 1\n",
+            " 1 1 0 1 0 0 0 1 0 0 0 1 0 1 0 0 0 0 1 1 0 0 1 1 1 1 1 0 1 1 0 0 1 0 1 0 1\n",
+            " 0 0 0 1 1 0 1 0 1 1 1 0 1 0 1 0 1 1 0 1 1 1 1 1 0 1 1 1 1 1 1 1 0 1 1 1 0\n",
+            " 1 1 1 0 1 1 1 0 1 1 1 1 1 1 1 1 0 0 1 1 1 1 1]\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -490,23 +518,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZrQUTJC_HFdw",
-        "outputId": "47987b01-643b-457c-c5c5-9f870b84dda2"
+        "outputId": "e05de99f-8f8a-454c-d893-8e3df6108c50"
       },
       "source": [
         "import numpy as np\r\n",
         "\r\n",
-        "y_test = np.array(y_test)\r\n",
         "dif = y_predict - y_test\r\n",
         "incorrect_num = np.sum(np.abs(dif))\r\n",
         "accuracy = 100 * ((len(y_test) - incorrect_num)/len(y_test))\r\n",
         "print(f\"The accuracy of the SVM model using the SVC kernel is: {accuracy:.1f}%.\")\r\n"
       ],
-      "execution_count": 23,
+      "execution_count": 200,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "The accuracy of the SVM model using the SVC kernel is: 90.6%.\n"
+            "The accuracy of the SVM model using the SVC kernel is: 96.5%.\n"
           ],
           "name": "stdout"
         }
@@ -519,48 +546,30 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "k88Ytl8BH4Oc",
-        "outputId": "4640b419-b40d-4f14-d92a-97c3ce535729"
+        "outputId": "89092956-f844-4699-98a6-1c3a5efd408d"
       },
       "source": [
         "from sklearn.metrics import classification_report\r\n",
         "\r\n",
         "print(classification_report(y_test, y_predict))"
       ],
-      "execution_count": 24,
+      "execution_count": 201,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.90      0.80      0.85        55\n",
-            "           1       0.91      0.96      0.93       116\n",
+            "           0       1.00      0.90      0.95        61\n",
+            "           1       0.95      1.00      0.97       110\n",
             "\n",
-            "    accuracy                           0.91       171\n",
-            "   macro avg       0.90      0.88      0.89       171\n",
-            "weighted avg       0.91      0.91      0.90       171\n",
+            "    accuracy                           0.96       171\n",
+            "   macro avg       0.97      0.95      0.96       171\n",
+            "weighted avg       0.97      0.96      0.96       171\n",
             "\n"
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "hpFUjIrlF-KG"
-      },
-      "source": [
-        "###Conclusion"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Jz8T0x5jGAq5"
-      },
-      "source": [
-        "The accuracy by the SVM classification was found to be about 91%."
       ]
     }
   ]
