--- a/kmeans_spectral.ipynb
+++ b/kmeans_spectral.ipynb
@@ -6,7 +6,6 @@
       "name": "kmeans-spectral.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMOfxnqLmyTJa3tV3XSXpEG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,10 +36,35 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "NqJdguPENEIU"
+      },
+      "source": [
+        "/* --------------------------------------------------------------------------------------------------------------------------------------\r\n",
+        "*   Author - Caleb Dawson\r\n",
+        "*   NetID - cdd370\r\n",
+        "*   CSE 4633 Artificial Intelligence - Assignment 1\r\n",
+        "*   Resources Used - slides, lecture recordings, scikit-learn.org\r\n",
+        "\r\n",
+        "--------------------------------------------------------------------------------------------------------------------------------------*/"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "ck8aLkq1I2ZS"
       },
       "source": [
         "###Generate two circles dataset"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uN0-XEEtLf3X"
+      },
+      "source": [
+        "Creates 400 shuffled points in a two concentric circle pattern.<br>\r\n",
+        "The first 5 points' coordinates are printed as an example."
       ]
     },
     {
@@ -50,7 +74,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f835b32c-077a-452d-c5b9-9bd8010fdf3e"
+        "outputId": "41ecd404-8e04-41f2-f344-71b932a81566"
       },
       "source": [
         "from sklearn.datasets import make_circles\r\n",
@@ -58,7 +82,7 @@
         "X, y = make_circles(n_samples=400, shuffle=True, noise=0.07, random_state=2, factor=0.5)\r\n",
         "print(X[0:5])"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -83,6 +107,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "U9TvQyTRL2Yw"
+      },
+      "source": [
+        "The two circles dataset is then plotted for visual reference."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -90,7 +123,7 @@
           "height": 314
         },
         "id": "J8vZyTY5KByx",
-        "outputId": "17ff632b-fc46-487e-a9d5-4467c36c3944"
+        "outputId": "7d77ee63-fe3f-4242-c246-dcb04f74ab0a"
       },
       "source": [
         "import matplotlib.pyplot as plt\r\n",
@@ -103,7 +136,7 @@
         "ax.set_xticks(())\r\n",
         "ax.set_yticks(())\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -115,7 +148,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 223
+          "execution_count": 25
         },
         {
           "output_type": "display_data",
@@ -141,13 +174,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "27wYMC76MHPU"
+      },
+      "source": [
+        "The KMeans model is now used twice, first with 2 clusters, then with 4 clusters.<br>\r\n",
+        "For each instance, the first 5 points' catagorizations are then printed as an example."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "CqrL5_UGKvnZ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a9b8870b-774d-4946-d138-3cec5445fd06"
+        "outputId": "902cce1b-0c43-4387-a65c-0c2f5aa8a5a1"
       },
       "source": [
         "from sklearn.cluster import KMeans\r\n",
@@ -158,7 +201,7 @@
         "kmeans2 = KMeans(n_clusters=4, random_state=2).fit(X)\r\n",
         "print(kmeans2.labels_[0:5])"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -180,13 +223,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nmxbFpmLMm-3"
+      },
+      "source": [
+        "The Spectral Clustering model is now used twice, first with 2  clusters, then with 4 clusters.<br>\r\n",
+        "For each instance, the first 5 points' catagorizations are then printed as an example."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "O0FCz1y7QOrY",
-        "outputId": "fbd60fc1-95a7-4408-bb11-5723b42e74cf"
+        "outputId": "0ac5afe2-c467-441b-f850-775adbde5608"
       },
       "source": [
         "from sklearn.cluster import SpectralClustering\r\n",
@@ -197,7 +250,7 @@
         "clustering2 = SpectralClustering(n_clusters=4, random_state=2, affinity=\"nearest_neighbors\").fit(X)\r\n",
         "print(clustering2.labels_[0:5])"
       ],
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -219,6 +272,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zdqm_AvpM1ld"
+      },
+      "source": [
+        "Each of the models are now plotted for visual reference.<br>\r\n",
+        "Spectral Clustering with 2 clusters appears to be the best model."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -226,7 +289,7 @@
           "height": 1000
         },
         "id": "sbKOKPJjQzoU",
-        "outputId": "19f626cf-0090-4d22-e397-0e01fc44de15"
+        "outputId": "8abcb4b5-02db-4e26-8e48-ab237484bf02"
       },
       "source": [
         "fig0 = plt.figure(figsize=(10, 10))\r\n",
@@ -270,7 +333,7 @@
         "ax4.set_yticks(())\r\n",
         "\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -282,7 +345,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 226
+          "execution_count": 28
         },
         {
           "output_type": "display_data",
